# conta

./: .env.example  .gitignore  LICENSE  Makefile  README.md  banner.txt  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/adapters/: __init__.py
app/adapters/controllers/: dashboard_controller.py
app/adapters/inbound/: __init__.py  account_controller.py  auth_controller.py  auth_middleware.py  budget_controller.py  category_controller.py  dependencies.py  goal_controller.py  health_controller.py  transaction_controller.py
app/adapters/outbound/: __init__.py  email_service.py  jwt_service.py  memory_repositories.py  password_service.py
app/config/: __init__.py  settings.py
app/core/: __init__.py
app/core/domain/: __init__.py  account.py  budget.py  dashboard.py  exceptions.py  goal.py  transaction.py  user.py
app/core/ports/: __init__.py  account.py  auth.py  budget.py  dashboard.py  database.py  goal.py  transaction.py
app/core/services/: __init__.py  account_service.py  auth_service.py  budget_service.py  dashboard_service.py  goal_service.py  transaction_service.py
docs/: architecture.md  brief.md  code-guidelines.md  docker-services.md  epico-status.md  falta.md  prd.md  prompt-ia-desenvolvedora.md  prompt-rapido.md  tasklist-epico-fundacional.md
docs/frontend/: architecture__frontend.md  prd_frontend.md
docs/stories/: 1.1.configuracao-inicial-backend.md  1.2.autenticacao-usuario.md  1.3.gestao-contas-financeiras.md  1.4.registro-transacoes.md  1.5.dashboard-principal.md  1.6.relatorios-basicos.md  2.1.gestao-metas.md  2.2.gestao-orcamentos.md
scripts/: mongo-init.js  print_banner_gradient.py  print_status_table.py
tests/: conftest.py
tests/integration/: test_account_endpoints.py  test_auth_endpoints.py  test_dashboard_controller.py  test_main_app.py  test_transaction_endpoints.py
tests/unit/: test_account_service.py  test_auth_service.py  test_dashboard_service.py  test_health_controller.py  test_settings.py  test_transaction_creation.py  test_transaction_deletion.py  test_transaction_retrieval.py  test_transaction_service.py  test_transaction_service_simple.py  test_transaction_service_update_delete.py
